--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@mdi/font": "^6.1.95",
         "axios": "^0.21",
         "bootstrap": "^4.6.0",
+        "deepmerge": "^4.2.2",
         "jquery": "^3.6",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
@@ -21,6 +23,15 @@
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "vue": "^2.6.12",
+        "vue-loader": "^15.9.7",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "date-fns": "^2.23.0",
+        "material-design-icons-iconfont": "^6.1.0",
+        "prettier": "^2.4.0",
+        "vuelidate": "^0.7.6",
+        "vuetify": "^2.5.8",
+        "vuex": "^3.6.2"
     }
 }
